# SchoolBucketSortParallel

./: CMakeLists.txt
inc/: bucketsort.hpp
src/: bucketsort-test.cpp
